[gd_scene load_steps=5 format=3 uid="uid://coku83a4t4puw"]

[ext_resource type="Script" uid="uid://dxrxhwhyl26wn" path="res://scripte/pause_menu.gd" id="1_n87rw"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vue75"]
bg_color = Color(0.14528283, 0.1798515, 0.7514069, 1)
corner_radius_top_left = 40
corner_radius_top_right = 40
corner_radius_bottom_right = 40
corner_radius_bottom_left = 40
shadow_size = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ekxnf"]
bg_color = Color(0.14509805, 0.29411766, 0.7529412, 1)
corner_radius_top_left = 40
corner_radius_top_right = 40
corner_radius_bottom_right = 40
corner_radius_bottom_left = 40

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ekxnf"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_n87rw")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -519.38525
offset_top = -271.0
offset_right = 519.38525
offset_bottom = 271.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 55

[node name="Button" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 105
theme_override_styles/normal = SubResource("StyleBoxFlat_vue75")
theme_override_styles/pressed = SubResource("StyleBoxFlat_vue75")
theme_override_styles/hover = SubResource("StyleBoxFlat_ekxnf")
theme_override_styles/focus = SubResource("StyleBoxEmpty_ekxnf")
text = "Resume"

[node name="Button2" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 105
theme_override_styles/normal = SubResource("StyleBoxFlat_vue75")
theme_override_styles/pressed = SubResource("StyleBoxFlat_vue75")
theme_override_styles/hover = SubResource("StyleBoxFlat_ekxnf")
theme_override_styles/focus = SubResource("StyleBoxEmpty_ekxnf")
text = "Options"

[node name="Button3" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 105
theme_override_styles/normal = SubResource("StyleBoxFlat_vue75")
theme_override_styles/pressed = SubResource("StyleBoxFlat_vue75")
theme_override_styles/hover = SubResource("StyleBoxFlat_ekxnf")
theme_override_styles/focus = SubResource("StyleBoxEmpty_ekxnf")
text = "Close"

[connection signal="pressed" from="VBoxContainer/Button" to="." method="_on_start_pressed"]
[connection signal="pressed" from="VBoxContainer/Button2" to="." method="_on_options_pressed"]
[connection signal="pressed" from="VBoxContainer/Button3" to="." method="_on_close_pressed"]
